<resources>
    <string name="locale">en</string>
    <string name="app_name" translatable="false">T-Wallpaper</string>
    <string name="mgs_ok"><![CDATA[OK]]></string>
    <string name="text_welcome"><![CDATA[Welcome]]></string>
    <string name="text_create_by"><![CDATA[Developed by]]></string>
    <string name="text_next"><![CDATA[Next]]></string>
    <string name="text_intro1_msg"><![CDATA[Tap automatically in any game, app, or website.]]></string>
    <string name="text_intro2_msg"><![CDATA[Easily configure the click location, speed and duration of each clicker.]]></string>
    <string name="text_intro3_msg"><![CDATA[You can save frequently used settings. Configure once, use anytime!]]></string>
    <string name="text_lang_en" translatable="false"><![CDATA[English]]></string>
    <string name="text_lang_ja" translatable="false"><![CDATA[日本語]]></string>
    <string name="text_lang_ko" translatable="false"><![CDATA[한국어]]></string>
    <string name="text_lang_hi" translatable="false"><![CDATA[हिन्दी]]></string>
    <string name="text_lang_vi" translatable="false"><![CDATA[Tiếng Việt]]></string>
    <string name="text_lang_tr" translatable="false"><![CDATA[Türkçe]]></string>
    <string name="text_lang_zh" translatable="false"><![CDATA[简体中文]]></string>
    <string name="text_lang_es" translatable="false"><![CDATA[Español]]></string>
    <string name="text_lang_pt" translatable="false"><![CDATA[Português]]></string>
    <string name="text_lang_ru" translatable="false"><![CDATA[Русский]]></string>
    <string name="text_lang_de" translatable="false"><![CDATA[Deutsch]]></string>
    <string name="text_lang_uk" translatable="false"><![CDATA[Українська]]></string>
    <string name="text_lang_ar" translatable="false"><![CDATA[العربية]]></string>
    <string name="text_lang_fr" translatable="false">Français</string>
    <string name="text_lang_id" translatable="false">Indonesian</string>
    <string name="text_lang_fil" translatable="false">Philippines</string>
    <string name="text_lang_bn" translatable="false">বাংলা</string>
    <string name="text_lang_pt_br" translatable="false">Português (Brazil)</string>
    <string name="text_lang_af" translatable="false">Afrikaans</string>
    <string name="text_lang_nl" translatable="false">Dutch</string>
    <string name="text_lang_en_ca" translatable="false">English (Canada)</string>
    <string name="text_lang_mr" translatable="false">मराठी (India)</string>
    <string name="text_lang_en_us" translatable="false">English (US)</string>
    <string name="text_app_version"><![CDATA[App version]]></string>
    <string name="msg_apply_language_dialog"><![CDATA[Are you sure you want to apply this language?]]></string>
    <string name="save_script"><![CDATA[Save]]></string>
    <string name="cancel"><![CDATA[Cancel]]></string>
    <string name="title_apply_change_language_dialog"><![CDATA[Apply Change Language]]></string>
    <string name="title_notification_24h"><![CDATA[WallpaperTheme is waiting for you]]></string>
    <string name="title_notification"><![CDATA[Notification Permission]]></string>
    <string name="message_notification"><![CDATA[Allow WallpaperTheme to send notifications to you.]]></string>
    <string name="other_app"><![CDATA[Other applications]]></string>
    <string name="title_update_version"><![CDATA[Update New Version]]></string>
    <string name="message_update_version"><![CDATA[WallpaperTheme has a new version. Please update to the new version for the best experience!]]></string>
    <string name="btn_update"><![CDATA[Update]]></string>
    <string name="btn_later"><![CDATA[Later]]></string>
    <string name="dont_show_again"><![CDATA[Don\'t show again]]></string>
    <string name="rating"><![CDATA[Enjoying WallpaperTheme?]]></string>
    <string name="rating_message"><![CDATA[We always strive to improve our app and your experience. Could you spare a moment to rate our app? Every feedback is highly valued!]]></string>
    <string name="smile_rating_terrible"><![CDATA[1 🌟]]></string>
    <string name="smile_rating_bad"><![CDATA[2 🌟]]></string>
    <string name="smile_rating_okay"><![CDATA[3 🌟]]></string>
    <string name="smile_rating_good"><![CDATA[4 🌟]]></string>
    <string name="smile_rating_great"><![CDATA[5 🌟]]></string>
    <string name="choose_email"><![CDATA[Choose an Email:]]></string>
    <string-array name="names">
        <item>@string/smile_rating_terrible</item>
        <item>@string/smile_rating_bad</item>
        <item>@string/smile_rating_okay</item>
        <item>@string/smile_rating_good</item>
        <item>@string/smile_rating_great</item>
    </string-array>
    <string name="feedback"><![CDATA[Feedback]]></string>
    <string name="share_app"><![CDATA[Share app]]></string>
    <string name="allowed"><![CDATA[Allowed]]></string>
    <string name="permission"><![CDATA[Permission]]></string>
    <string name="rate_us_now"><![CDATA[Rate Us]]></string>
    <string name="choose_language"><![CDATA[Choose Language]]></string>
    <string name="please_select_language"><![CDATA[Please select a display language.]]></string>
    <string name="content_feedback"><![CDATA[We are sorry to hear you are not satisfied with WallpaperTheme. Please send your feedback and suggestions to our email, so we can improve our service in the future.]]></string>
    <string name="warning_rating"><![CDATA[Please select your rating.]]></string>
    <string name="video_starting_in_text"><![CDATA[Video starting in]]></string>
    <string name="watch_ad_button_text"><![CDATA[Watch Ads]]></string>
    <string name="purchase_vip_button_text"><![CDATA[Purchase VIP]]></string>
    <string name="description_remind_watch_ad"><![CDATA[Watch a short video to apply last script]]></string>
    <string name="connect_internet"><![CDATA[Internet Connection]]></string>
    <string name="message_connect_internet"><![CDATA[To ensure we can maintain and enhance the application, a network connection is essential. Please enable your network to continue using the app.]]></string>
    <string name="lost_network_connection"><![CDATA[Lost network connection. Please reconnect to the network.]]></string>
    <string name="reconnect"><![CDATA[Reconnect]]></string>
    <string name="str_close">Close</string>
    <string name="exit_app">Exit</string>
    <string name="creator" translatable="false">Thang Le Toan</string>
    <string name="txt_loading_ads">Loading Ads…</string>
    <string name="segment_intro1">Automate your actions, \nincrease efficiency!</string>
    <string name="segment_intro2">Multi-Target, High \nPerformance!</string>
    <string name="segment_intro3">Conveniently schedule &amp; save \nsettings!</string>
    <string name="segment_intro4">Flexible customization, easy \nto use!</string>
    <string name="get_started">Get Started</string>
    <string name="swipe_to_explore">Swipe to explore</string>
    <string name="skip_ads">Skip Ads</string>
    <string name="title_exit_app">Exit App</string>
    <string name="label_exit_app">Are you sure you want to exit app?</string>
    <string name="description_watch_ad_reward_skin">Watch an ad and instantly unlock unlimited access to this skin!</string>
    <string name="app_water_reminder_des">Drink water on time, stay healthy.</string>
    <string name="app_recovery_des">Recover deleted photos easily.</string>
    <string name="str_you_might_like">You might like</string>
    <string name="app_hide_app_des">Hide Apps, Photos, and Videos.</string>
    <string name="app_sleep_sounds_des">Help you fall asleep fast.</string>
    <string name="text_pro">Pro</string>
    <string name="setting">Settings</string>
    <string name="overview">Overview</string>
    <string name="languages">Languages</string>
    <string name="more">More</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="email">Email</string>
    <string name="hint_enter_email">Please enter your email address</string>
    <string name="problem_type">Problem type</string>
    <string name="suggestions">Suggestions</string>
    <string name="bugs">Bugs</string>
    <string name="others">Others</string>
    <string name="content">Contents</string>
    <string name="hint_content_description">Please provide a detailed description of the problem you encountered, which will help us to resolve your issue more effectively.</string>
    <string name="str_submit">Submit</string>
    <string name="invalid_email_format">Please enter a valid email address</string>
    <string name="not_empty_email">Email cannot be empty</string>
    <string name="not_empty_content">Content cannot be empty</string>
    <string name="sent_feedback_success">Feedback sent successfully!</string>
    <string name="sent_feedback_fail">Failed to send feedback!</string>
    <string name="language_change_successful">Language change successful</string>
    <string name="label_grant_permission">Please check and grant the necessary permissions for the app to function properly.</string>
    <string name="notification_permission">Notification Permission</string>
    <string name="label_notification_permission">This app requests permission to send notifications, allowing you to receive important updates and alerts.</string>
    <string name="manage_files_permission">Manage Files Permission</string>
    <string name="label_grant_manage_files_permission">This app requires permission to manage your files so you can access, organize, and save content seamlessly.</string>
    <string name="write_storage_permission">Write Storage Permission</string>
    <string name="permission_denied">This app requires permission to save your files properly.</string>
    <string name="access_files_permission_message">Smart Recovery needs access to your photos, videos, and audio files to save them properly. Please grant these permissions in Settings to continue.</string>
    <string name="label_manage_files_permission">This app requires permission to manage your files, allowing you to access, organize, and save content seamlessly. Please grant this permission to continue using all features.</string>
    <string name="permission_request">The app requires file read permissions to function properly. Please grant permission!</string>
    <string name="battery_limit_free">Battery Limit Free</string>
    <string name="battery_optimization_label">Prevent the app from being killed by the system</string>
    <string name="str_exit">Exit</string>
    <string name="notification_permission_desc">The Application needs Notification Permission to provide phone finder by clapping.</string>
    <string name="allow_access">Allow Access</string>
    <string name="featured_items">Featured items</string>
    <string name="download_now">Download now</string>
    <string name="no_data_found">No Data Found</string>
    <string name="live">Live</string>
    <string name="search_here">Search here</string>
    <string name="no_data_for">No data for</string>
    <string name="select">Select</string>
    <string name="locked">Locked</string>
    <string name="premium">Premium</string>
    <string name="all_wallpaper">All wallpaper</string>
    <string name="please_type_something">Please type something…</string>
    <string name="set_wallpaper_as">Set Wallpaper as?</string>
    <string name="home_screen_only">Home screen only</string>
    <string name="lock_screen_only">Lock screen only</string>
    <string name="home_lock_screen"><![CDATA[Home & Lock screen]]></string>
    <string name="download">Download</string>
    <string name="apply">Apply</string>
    <string name="wallpaper_added_successfully">Wallpaper added successfully</string>
    <string name="something_went_wrong">Something went wrong</string>
    <string name="setting_wallpaper_is_not_allowed">Setting Wallpaper is not allowed</string>
    <string name="allow">Allow</string>
    <string name="deny">Cancel</string>
</resources>