<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/common_16dp"
        android:background="@drawable/bg_bottom_sheet">

        <TextView
            android:id="@+id/txt_title_dialog_apply_click_script"
            style="@style/BottomSheetTextTitle"
            android:text="@string/choose_language"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/lytContent"
            style="@style/BottomSheetTextMessage"
            android:text="@string/please_select_language"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txt_title_dialog_apply_click_script">

        </TextView>

        <TextView
            android:id="@+id/btnConfirmYes"
            style="@style/ButtonConfirmStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/common_24dp"
            android:layout_marginBottom="@dimen/common_20dp"
            android:text="@string/mgs_ok"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/lytContent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
