<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/common_16dp"
        android:background="@drawable/bg_bottom_sheet">

        <TextView
            android:id="@+id/txt_title_dialog_apply_click_script"
            style="@style/BottomSheetTextTitle"
            android:text="@string/title_update_version"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/lytContent"
            style="@style/BottomSheetTextMessage"
            android:text="@string/message_update_version"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txt_title_dialog_apply_click_script">

        </TextView>

        <androidx.cardview.widget.CardView
            android:id="@+id/cardViewConfirmYes"
            android:layout_width="match_parent"
            android:layout_height="@dimen/splash_continue_button_height"
            android:layout_marginTop="@dimen/common_24dp"
            android:layout_marginBottom="16dp"
            app:cardCornerRadius="@dimen/common_50dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/lytContent">

            <TextView
                android:id="@+id/btnConfirmYes"
                android:fontFamily="@font/sf_pro_medium"
                android:textAllCaps="true"
                android:textStyle="bold"
                android:gravity="center"
                android:layout_gravity="center"
                android:paddingLeft="55dp"
                android:paddingRight="55dp"
                android:textColor="@color/black_02"
                android:textSize="@dimen/text_size_16sp"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/btn_update" />
        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/btnCancel"
            style="@style/ButtonCancelStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/common_12dp"
            android:text="@string/btn_later"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cardViewConfirmYes" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
