<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/common_24dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:background="@drawable/bg_bottom_sheet">

        <TextView
            android:id="@+id/txt_title_dialog_permission"
            style="@style/BottomSheetTextTitle"
            android:text="@string/title_exit_app"
            android:textColor="@color/white"
            android:textSize="@dimen/text_size_24sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="@dimen/common_8dp" />

        <TextView
            android:id="@+id/lytContent"
            style="@style/BottomSheetTextMessage"
            android:text="@string/label_exit_app"
            android:textColor="@color/white"
            android:textSize="@dimen/text_size_16sp"
            android:layout_marginHorizontal="@dimen/common_16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txt_title_dialog_permission"
            android:gravity="center" />

        <TextView
            android:id="@+id/btnConfirmYes"
            android:layout_width="230dp"
            android:layout_height="60dp"
            android:layout_marginTop="@dimen/common_24dp"
            android:background="@drawable/bg_button_primary_with_shadow"
            android:clickable="true"
            android:focusable="true"
            android:fontFamily="@font/sf_pro_semi_bold"
            android:gravity="center"
            android:text="@string/mgs_ok"
            android:textColor="@color/black_02"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/lytContent" />

        <TextView
            android:id="@+id/btnCancel"
            android:layout_width="230dp"
            android:layout_height="60dp"
            android:layout_marginTop="@dimen/common_12dp"
            android:background="@drawable/bg_button_secondary_permission"
            android:clickable="true"
            android:focusable="true"
            android:fontFamily="@font/sf_pro_semi_bold"
            android:gravity="center"
            android:text="@string/cancel"
            android:textAllCaps="false"
            android:textColor="@color/color_text_secondary_button"
            android:textSize="16sp"
            android:layout_marginBottom="@dimen/common_8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btnConfirmYes"
            app:layout_constraintBottom_toBottomOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
