<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data>

    </data>


    <RelativeLayout
        android:layout_width="330dp"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_gravity="center"

            android:background="@drawable/bg_round_corner_30"
            android:backgroundTint="@color/color_popup_bg"
            android:gravity="center"
            android:orientation="vertical"
            android:paddingHorizontal="20dp"
            android:paddingVertical="20dp">


            <TextView

                style="@style/TextViewLocal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:fontFamily="@font/sf_pro_medium"
                android:text="@string/set_wallpaper_as"

                android:textColor="@color/color_theme_blue"
                android:textSize="@dimen/ts_16" />

            <View
                android:layout_width="match_parent"
                android:layout_height=".5dp"
                android:layout_marginVertical="15dp"
                android:alpha=".6"
                android:background="@color/color_theme_blue" />


            <LinearLayout
                android:id="@+id/btn_home"
                android:layout_width="230dp"
                android:layout_height="50dp"
                android:background="@drawable/bg_round_corner_500"
                android:backgroundTint="@color/color_theme_purple_light"
                android:gravity="center"
                android:orientation="horizontal">


                <TextView

                    style="@style/TextViewLocal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/sf_pro_medium"
                    android:text="@string/home_screen_only"
                    android:textColor="@color/color_text_primary"
                    android:textSize="@dimen/ts_14" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/btn_Lock"
                android:layout_width="230dp"
                android:layout_height="50dp"
                android:layout_marginTop="10dp"

                android:background="@drawable/bg_round_corner_500"
                android:backgroundTint="@color/color_theme_purple_light"

                android:gravity="center"
                android:orientation="horizontal">


                <TextView

                    style="@style/TextViewLocal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/sf_pro_medium"
                    android:text="@string/lock_screen_only"
                    android:textColor="@color/color_text_primary"
                    android:textSize="@dimen/ts_14" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/btn_both"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/bg_round_corner_500"
                android:backgroundTint="@color/color_theme_purple_dark"
                android:gravity="center"
                android:orientation="horizontal">


                <TextView

                    style="@style/TextViewLocal"
                    android:layout_width="230dp"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/sf_pro_medium"
                    android:text="@string/home_lock_screen"
                    android:textColor="@color/color_text_primary"
                    android:textSize="@dimen/ts_14" />

            </LinearLayout>


            <TextView
                android:id="@+id/btn_cancel"
                style="@style/TextViewLocal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:fontFamily="@font/sf_pro_regular"
                android:paddingVertical="5dp"
                android:text="@string/cancel"
                android:textColor="@color/color_theme_blue"
                android:textSize="@dimen/ts_14" />


        </LinearLayout>

    </RelativeLayout>


</layout>